--- a/templates/admin/categories/add/add_category.html
+++ b/templates/admin/categories/add/add_category.html
@@ -31,23 +31,23 @@
                 <p>{{ message }}</p>
             </div>
             {% endfor %}
-            <h3>Dodawanie nowej kategorii</h3>
+            <h3>Adding a new category</h3>
 
-            <p>Nazwa *</p>
+            <p>Name *</p>
             <input type="text" name="name" id="name" required>
 
-            <p>Opis</p>
+            <p>Description</p>
             <input type="text" name="description" id="description">
 
-            <p>Kategoria nadrzędna</p>
+            <p>Parent category</p>
             <select name="parent_id">
-                <option value="None">Brak</option>
+                <option value="None">None</option>
                 {% for category in categories %}
                 <option value="{{ category[0] }}">{{ category[1] }}</option>
                 {% endfor %}
             </select><br>
 
-            <input id="submitButton" type="submit" value="Dodaj kategorię">
+            <input id="submitButton" type="submit" value="Add category">
         </form>
     </div>
 </div>
