--- a/templates/admin/categories/view/view_categories.html
+++ b/templates/admin/categories/view/view_categories.html
@@ -25,27 +25,27 @@
                       d="M3 6a2 2 0 0 1 2-2h5.532a2 2 0 0 1 1.536.72l1.9 2.28H3V6Zm0 3v10a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V9H3Z"
                       clip-rule="evenodd"/>
             </svg>
-            Dodaj nową kategorię
+            Add a new category
         </button>
-        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filtruj wyniki...">
+        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filter results...">
 
         <table id="posts_table">
             <thead>
             <tr>
                 <th>
-                    <p class="headingp">Identyfikator </p>
+                    <p class="headingp">Identifier</p>
                 </th>
                 <th>
-                    <p class="headingp">Nazwa</p>
+                    <p class="headingp">Name</p>
                 </th>
                 <th>
-                    <p class="headingp">Opis</p>
+                    <p class="headingp">Description</p>
                 </th>
                 <th>
-                    <p class="headingp">Data stworzenia</p>
+                    <p class="headingp">Creation Date</p>
                 </th>
                 <th>
-                    <p class="headingp">ID kategorii nadrzędna</p>
+                    <p class="headingp">Parent Category ID</p>
                 </th>
             </tr>
             </thead>
