--- a/templates/admin/comments/comments.html
+++ b/templates/admin/comments/comments.html
@@ -17,21 +17,21 @@
 <div id="main-content">
     {% include 'navbar.html' %}
     <div id="content">
-        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filtruj wyniki...">
+        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filter results...">
         <table id="posts_table">
             <thead>
             <tr>
                 <th>
-                    <p class="headingp">Autor</p>
+                    <p class="headingp">Author</p>
                 </th>
                 <th>
-                    <p class="headingp">Treść</p>
+                    <p class="headingp">Content</p>
                 </th>
                 <th>
-                    <p class="headingp">W odpowiedzi na</p>
+                    <p class="headingp">Replying to</p>
                 </th>
                 <th>
-                    <p class="headingp">Data</p>
+                    <p class="headingp">Date</p>
                 </th>
             </tr>
             </thead>
