--- a/templates/admin/pages/view/show_pages.html
+++ b/templates/admin/pages/view/show_pages.html
@@ -21,49 +21,49 @@
             <button onclick="location.href = '/admin/pages/add'" id="addPage"><svg class="w-[18px] h-[18px] text-gray-800 dark:text-white" aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 7h14M5 12h14M5 17h14" />
-                </svg>Dodaj nową stronę</button>
+                </svg>Add New Page</button>
 
             <table id="posts_table">
                 <thead>
                     <tr>
                         <th>
-                            <p class="headingp">Identyfikator </p>
+                            <p class="headingp">ID </p>
                         </th>
                         <th>
-                            <p class="headingp">Przyjazny dla użytkownika adres URL </p>
+                            <p class="headingp">User-friendly URL </p>
                         </th>
                         <th>
-                            <p class="headingp">Tytuł</p>
+                            <p class="headingp">Title</p>
                         </th>
                         <th>
-                            <p class="headingp">Autor</p>
+                            <p class="headingp">Author</p>
                         </th>
                         <th>
-                            <p class="headingp">Data utworzenia</p>
+                            <p class="headingp">Creation Date</p>
                         </th>
                         <th>
-                            <p class="headingp">Meta tytuł </p>
+                            <p class="headingp">Meta Title </p>
                         </th>
                         <th>
-                            <p class="headingp">Meta opis </p>
+                            <p class="headingp">Meta Description </p>
                         </th>
                         <th>
-                            <p class="headingp">Meta słowa kluczowe </p>
+                            <p class="headingp">Meta Keywords </p>
                         </th>
                         <th>
-                            <p class="headingp">Meta roboty </p>
+                            <p class="headingp">Meta Robots </p>
                         </th>
                         <th>
-                            <p class="headingp">Adres przekierowania URL</p>
+                            <p class="headingp">Redirect URL</p>
                         </th>
                         <th>
-                            <p class="headingp">Strona nadrzędna </p>
+                            <p class="headingp">Parent Page </p>
                         </th>
                         <th>
-                            <p class="headingp">Pokazywana w pasku górnym?</p>
+                            <p class="headingp">Displayed in Top Bar?</p>
                         </th>
                         <th>
-                            <p class="headingp">Kategoria</p>
+                            <p class="headingp">Category</p>
                         </th>
 
                     </tr>
@@ -72,18 +72,18 @@
     {% for page in pages %}
     <tr>
         <td><p>{{ page[0] }}</p></td>
-        <td>{% if not page[1] %}<p>Brak</p>{% else %}<p>{{ page[1] }}</p>{% endif %}</td>
-        <td>{% if not page[2] %}<p>Brak</p>{% else %}<p>{{ page[2] }}</p>{% endif %}</td>
-        <td>{% if not page[3] %}<p>Brak</p>{% else %}<p>{{ page[3] }}</p>{% endif %}</td>
-        <td>{% if not page[4] %}<p>Brak</p>{% else %}<p>{{ page[4] }}</p>{% endif %}</td>
-        <td>{% if not page[5] %}<p>Brak</p>{% else %}<p>{{ page[5] }}</p>{% endif %}</td>
-        <td>{% if not page[6] %}<p>Brak</p>{% else %}<p>{{ page[6] }}</p>{% endif %}</td>
-        <td>{% if not page[7] %}<p>Brak</p>{% else %}<p>{{ page[7] }}</p>{% endif %}</td>
+        <td>{% if not page[1] %}<p>None</p>{% else %}<p>{{ page[1] }}</p>{% endif %}</td>
+        <td>{% if not page[2] %}<p>None</p>{% else %}<p>{{ page[2] }}</p>{% endif %}</td>
+        <td>{% if not page[3] %}<p>None</p>{% else %}<p>{{ page[3] }}</p>{% endif %}</td>
+        <td>{% if not page[4] %}<p>None</p>{% else %}<p>{{ page[4] }}</p>{% endif %}</td>
+        <td>{% if not page[5] %}<p>None</p>{% else %}<p>{{ page[5] }}</p>{% endif %}</td>
+        <td>{% if not page[6] %}<p>None</p>{% else %}<p>{{ page[6] }}</p>{% endif %}</td>
+        <td>{% if not page[7] %}<p>None</p>{% else %}<p>{{ page[7] }}</p>{% endif %}</td>
         <td><p>{{ page[8] }}</p></td>
-        <td>{% if not page[9] %}<p>Brak</p>{% else %}<p>{{ page[9] }}</p>{% endif %}</td>
-        <td>{% if not page[10] %}<p>Brak</p>{% else %}<p>{{ page[10] }}</p>{% endif %}</td>
-        <td><p>{{ {0: "Nie", 1: "Tak"}[page[11]] }}</p></td>
-        <td>{% if not page[12] %}<p>Brak</p>{% else %}<p>{{ page[12] }}</p>{% endif %}</td>
+        <td>{% if not page[9] %}<p>None</p>{% else %}<p>{{ page[9] }}</p>{% endif %}</td>
+        <td>{% if not page[10] %}<p>None</p>{% else %}<p>{{ page[10] }}</p>{% endif %}</td>
+        <td><p>{{ {0: "No", 1: "Yes"}[page[11]] }}</p></td>
+        <td>{% if not page[12] %}<p>None</p>{% else %}<p>{{ page[12] }}</p>{% endif %}</td>
         <td>
             <button onclick="location.href = '/admin/pages/edit?id={{ page[0] }}'" class="edit-button">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
