--- a/templates/admin/users/view/admin_show_users.html
+++ b/templates/admin/users/view/admin_show_users.html
@@ -24,26 +24,26 @@
                       d="M12 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4h-4Z"
                       clip-rule="evenodd"/>
             </svg>
-            Dodaj nowego użytkownika
+            Add new user
         </button>
-        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filtruj wyniki...">
+        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filter results...">
         <table id="posts_table">
             <thead>
             <tr>
                 <th>
-                    <p class="headingp">Imie</p>
+                    <p class="headingp">First Name</p>
                 </th>
                 <th>
-                    <p class="headingp">Nazwisko</p>
+                    <p class="headingp">Last Name</p>
                 </th>
                 <th>
                     <p class="headingp">Email</p>
                 </th>
                 <th>
-                    <p class="headingp">Uprawnienia</p>
+                    <p class="headingp">Permissions</p>
                 </th>
                 <th>
-                    <p class="headingp">Liczba postów</p>
+                    <p class="headingp">Number of Posts</p>
                 </th>
             </tr>
             </thead>
