--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
-        <div class="navbar">
-            <span class="logo">IgorCMS</span>
-            <ul>
-                <li><p>Witaj {{ firstname }} {{ lastname }}</p></li>
-            </ul>
-        </div>
+<div class="navbar">
+    <span class="logo">IgorCMS</span>
+    <ul>
+        <li><p>Welcome {{ firstname }} {{ lastname }}</p></li>
+    </ul>
+</div>
