--- a/templates/setup/already-setted-up.html
+++ b/templates/setup/already-setted-up.html
@@ -11,9 +11,8 @@
 
 <body>
     <div id="main">
-        <p>CMS został już skonfigurowany, aby przejść do panelu zarządzania kliknij przycisk poniżej.</p>
-        <button id="continueButton" onclick="window.location.replace('/admin/login');">Kontynuuj</button>
-
+        <p>The CMS has already been configured. To go to the management panel, click the button below.</p>
+        <button id="continueButton" onclick="window.location.replace('/admin/login');">Continue</button>
     </div>
 </body>
 
