--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -11,7 +11,7 @@
                           clip-rule="evenodd"/>
                 </svg>
 
-                Kokpit
+                Dashboard
             </a>
         </li>
         {% if permissions == 3 %}
@@ -22,7 +22,7 @@
                       d="M5 7h14M5 12h14M5 17h14"/>
             </svg>
 
-            Strony</a></li>
+            Pages</a></li>
         {% endif %}
         {% if permissions == 3 %}
         <li><a href="/admin/categories/view">
@@ -33,7 +33,7 @@
                       clip-rule="evenodd"/>
             </svg>
 
-            Kategorie</a></li>
+            Categories</a></li>
         {% endif %}
 
         <li><a href="/admin/images/view">
@@ -44,7 +44,7 @@
                       d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z"
                       clip-rule="evenodd"/>
             </svg>
-            Biblioteka zdjęć</a></li>
+            Image Library</a></li>
 
 
         <li><a href="/admin/posts/view">
@@ -55,7 +55,7 @@
                       d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z"
                       clip-rule="evenodd"/>
             </svg>
-            Posty</a></li>
+            Posts</a></li>
         <li><a href="/admin/plugins/view">
             <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                  width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -63,7 +63,7 @@
                       d="m8 8-4 4 4 4m8 0 4-4-4-4m-2-3-4 14"/>
             </svg>
 
-            Wtyczki</a></li>
+            Plugins</a></li>
         <li><a href="/admin/comments/view">
             <svg class="w-[18px] h-[18px] text-gray-800 dark:text-white" aria-hidden="true"
                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -72,7 +72,7 @@
                       d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6Zm2 8v-2h7v2H4Zm0 2v2h7v-2H4Zm9 2h7v-2h-7v2Zm7-4v-2h-7v2h7Z"
                       clip-rule="evenodd"/>
             </svg>
-            Komentarze</a></li>
+            Comments</a></li>
         {% if permissions == 3 %}
         <li><a href="/admin/users/view">
             <svg class="w-[18px] h-[18px] text-gray-800 dark:text-white" aria-hidden="true"
@@ -82,7 +82,7 @@
                       d="M12 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4h-4Z"
                       clip-rule="evenodd"/>
             </svg>
-            Użytkownicy</a></li>
+            Users</a></li>
         {% endif %}
         <li><a href="/admin/settings">
             <svg class="w-[18px] h-[18px] text-gray-800 dark:text-white" aria-hidden="true"
@@ -91,7 +91,7 @@
                 <path
                         d="M10.83 5a3.001 3.001 0 0 0-5.66 0H4a1 1 0 1 0 0 2h1.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2h-9.17ZM4 11h9.17a3.001 3.001 0 0 1 5.66 0H20a1 1 0 1 1 0 2h-1.17a3.001 3.001 0 0 1-5.66 0H4a1 1 0 1 1 0-2Zm1.17 6H4a1 1 0 1 0 0 2h1.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2h-9.17a3.001 3.001 0 0 0-5.66 0Z"/>
             </svg>
-            Ustawienia</a></li>
+            Settings</a></li>
         <li>
             <hr>
         </li>
@@ -102,6 +102,6 @@
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                       d="M16 12H4m12 0-4 4m4-4-4-4m3-4h2a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3h-2"/>
             </svg>
-            Wyloguj się</a></li>
+            Log Out</a></li>
     </ul>
 </div>
