--- a/templates/admin/posts/view/show_posts.html
+++ b/templates/admin/posts/view/show_posts.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../../../static/admin/posts/view/show_posts.css">
     <link rel="stylesheet" href="../../../static/admin/navbar.css">
     <link rel="stylesheet" href="../../../static/admin/sidebar.css">
-
 </head>
 
 <body>
@@ -19,6 +18,7 @@
     {% include 'navbar.html' %}
 
     <div id="content">
+        <!-- Button to create a new post -->
         <button id="createPost" onclick="location.href = '/admin/posts/add'">
             <svg class="w-[18px] h-[18px] text-gray-800 dark:text-white" aria-hidden="true"
                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -26,59 +26,67 @@
                       d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z"
                       clip-rule="evenodd"/>
             </svg>
-            Stwórz post
+            Create Post
         </button>
 
-        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filtruj wyniki...">
+        <!-- Input field to filter posts -->
+        <input oninput="handleDataFilter()" type="text" id="filter" placeholder="Filter results...">
+
+        <!-- Table displaying all posts -->
         <table id="posts_table">
             <thead>
             <tr>
                 <th>
-                    <p class="headingp">Tytuł</p>
+                    <p class="headingp">Title</p>
                 </th>
                 <th>
-                    <p class="headingp">Autor</p>
+                    <p class="headingp">Author</p>
                 </th>
                 <th>
-                    <p class="headingp">Kategoria</p>
+                    <p class="headingp">Category</p>
                 </th>
                 <th>
-                    <p class="headingp">Tagi</p>
+                    <p class="headingp">Tags</p>
                 </th>
                 <th>
                     <p class="headingp">Status</p>
                 </th>
                 <th>
-                    <p class="headingp">Data</p>
+                    <p class="headingp">Date</p>
                 </th>
-
-
             </tr>
             </thead>
             <tbody>
             {% for post in posts %}
             <tr>
+                <!-- Link to the post with title -->
                 <td>
-                    <a target="_blank" href="/{{ sanitize_text(post[2]) if post[2] else 'bez-kategorii' }}/{{ post[7] }}">{{ post[0] }}</a>
+                    <a target="_blank" href="/{{ sanitize_text(post[2]) if post[2] else 'no-category' }}/{{ post[7] }}">{{ post[0] }}</a>
                 </td>
+                <!-- Author of the post -->
                 <td>
                     <p>{{ post[1] }}</p>
                 </td>
+                <!-- Category of the post, or "None" if not set -->
                 {% if not post[2] %}
-                <td>Brak</td>
+                <td>None</td>
                 {% else %}
                 <td>{{ post[2] }}</td>
                 {% endif %}
+                <!-- Tags of the post, or "None" if not set -->
                 {% if not post[3] %}
-                <td>Brak</td>
+                <td>None</td>
                 {% else %}
                 <td>{{ post[3] }}</td>
                 {% endif %}
+                <!-- Status of the post -->
                 <td>{{ post[5].capitalize() }}</td>
+                <!-- Last modified date of the post -->
                 <td>
-                    <p>Ostatnio edytowane<br>{{ post[4] }}</p>
+                    <p>Last edited<br>{{ post[4] }}</p>
                 </td>
                 <td>
+                    <!-- Edit button -->
                     <button onclick="location.href = '/admin/posts/edit?id={{ post[6] }}'" class="edit-button">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                              stroke="currentColor">
@@ -86,6 +94,7 @@
                                   d="M11 4H6a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2v-5M16.414 3.586a2 2 0 112.828 2.828L10 15H6v-4l10.414-10.414z"/>
                         </svg>
                     </button>
+                    <!-- Delete button (only for admins with permission level 3) -->
                     {% if permissions == 3 %}
                     <button onclick="location.href = '/admin/posts/delete?id={{ post[6] }}'"
                             class="delete-button">
@@ -103,23 +112,25 @@
         </table>
     </div>
 </div>
+
 <script>
     let lastLength = 0
 
+    // Handle filtering posts based on user input
     let handleDataFilter = () => {
         let tableRows = document.getElementsByTagName("tr")
-
         let query = document.getElementById("filter").value
 
+        // Reset all rows visibility if query length is less than previous length
         if (query.length < lastLength) {
             for (const row of tableRows) {
                 row.style.display = "table-row"
             }
-
         }
 
         lastLength = query.length
 
+        // Loop through each row and hide rows that do not match the filter query
         for (let x = 1; x <= tableRows.length - 1; x++) {
             let disableRow = true
 
@@ -127,7 +138,6 @@
                 if (children.textContent.toLowerCase().includes(query.toLowerCase())) {
                     disableRow = false
                 }
-
             }
 
             if (disableRow) {
@@ -136,6 +146,7 @@
         }
     }
 </script>
+
 </body>
 
 </html>
