--- a/templates/admin/posts/view/show_posts.html
+++ b/templates/admin/posts/view/show_posts.html
@@ -94,8 +94,8 @@
                                   d="M11 4H6a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2v-5M16.414 3.586a2 2 0 112.828 2.828L10 15H6v-4l10.414-10.414z"/>
                         </svg>
                     </button>
-                    <!-- Delete button (only for admins with permission level 3) -->
-                    {% if permissions == 3 %}
+
+                    {% if permissions == PermissionsEnum.ADMINISTRATOR %}
                     <button onclick="location.href = '/admin/posts/delete?id={{ post[6] }}'"
                             class="delete-button">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
