--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -14,7 +14,7 @@
                 Dashboard
             </a>
         </li>
-        {% if permissions == 3 %}
+        {% if permissions == PermissionsEnum.ADMINISTRATOR %}
         <li><a href="/admin/pages/view">
             <svg class="w-[18px] h-[18px] text-gray-800 dark:text-white" aria-hidden="true"
                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -24,7 +24,7 @@
 
             Pages</a></li>
         {% endif %}
-        {% if permissions == 3 %}
+        {% if permissions == PermissionsEnum.ADMINISTRATOR %}
         <li><a href="/admin/categories/view">
             <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                  width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -73,7 +73,7 @@
                       clip-rule="evenodd"/>
             </svg>
             Comments</a></li>
-        {% if permissions == 3 %}
+        {% if permissions == PermissionsEnum.ADMINISTRATOR %}
         <li><a href="/admin/users/view">
             <svg class="w-[18px] h-[18px] text-gray-800 dark:text-white" aria-hidden="true"
                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
